--- a/src/3.inputs.ipynb
+++ b/src/3.inputs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "id": "6cad41f7",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "id": "fb855109",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "id": "23e0ea91",
    "metadata": {},
    "outputs": [],
@@ -117,6 +117,7 @@
     "    return rssi, etx, delay, busy\n",
     "\n",
     "edge_inputs = []\n",
+    "edge_labels = []\n",
     "label_0_count = 0\n",
     "label_1_count = 0\n",
     "target_per_label = num_samples // 2\n",
@@ -138,12 +139,13 @@
     "    else:\n",
     "        label_1_count += 1\n",
     "    \n",
-    "    edge_inputs.append([rssi, etx, delay, busy])"
+    "    edge_inputs.append([rssi, etx, delay, busy])\n",
+    "    edge_labels.append(target_label)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "id": "b71a351d",
    "metadata": {},
    "outputs": [],
@@ -166,6 +168,7 @@
     "    return efsr_edge\n",
     "\n",
     "radnet_inputs = []\n",
+    "radnet_labels = []\n",
     "good_performance_count = 0\n",
     "poor_performance_count = 0\n",
     "target_per_performance = num_samples // 2\n",
@@ -186,7 +189,8 @@
     "    else:\n",
     "        good_performance_count += 1\n",
     "    \n",
-    "    radnet_inputs.append([efsr])"
+    "    radnet_inputs.append([efsr])\n",
+    "    radnet_labels.append(target_performance)"
    ]
   },
   {
@@ -199,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "id": "e4db4e90",
    "metadata": {},
    "outputs": [
@@ -207,21 +211,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Edges Inputs salvo em ../datasets/edges_input.csv\n"
+      "Edges Inputs salvo em ../inputs/edges_input.csv\n"
      ]
     }
    ],
    "source": [
     "edges_input = pd.DataFrame(edge_inputs, columns=[\"rssi\", \"etx\", \"delay\", \"busy_fraction\"])\n",
+    "edges_input['label'] = edge_labels\n",
+    "\n",
     "os.makedirs(\"../inputs\", exist_ok=True)\n",
     "edges_input.to_csv(\"../inputs/edges_input.csv\", index=False)\n",
     "\n",
-    "print(\"Edges Inputs salvo em ../datasets/edges_input.csv\")"
+    "print(\"Edges Inputs salvo em ../inputs/edges_input.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 59,
    "id": "02880e56",
    "metadata": {},
    "outputs": [
@@ -229,16 +235,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Radnet Input salvo em ../datasets/radnet_input.csv\n"
+      "Radnet Input salvo em ../inputs/radnet_input.csv\n"
      ]
     }
    ],
    "source": [
     "radnet_input = pd.DataFrame(radnet_inputs, columns=[\"efsr_edge\"])\n",
+    "radnet_input['label'] = radnet_labels\n",
+    "\n",
     "os.makedirs(\"../inputs\", exist_ok=True)\n",
     "radnet_input.to_csv(\"../inputs/radnet_input.csv\", index=False)\n",
     "\n",
-    "print(\"Radnet Input salvo em ../datasets/radnet_input.csv\")"
+    "print(\"Radnet Input salvo em ../inputs/radnet_input.csv\")"
    ]
   }
  ],
