--- a/src/4.inference.ipynb
+++ b/src/4.inference.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "id": "fd5830c0",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "id": "dd1b6001",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "id": "31a3717c",
    "metadata": {},
    "outputs": [],
@@ -82,13 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "id": "b5cd0b26",
    "metadata": {},
    "outputs": [],
    "source": [
     "edges_input_df = pd.read_csv(\"../inputs/edges_input.csv\")\n",
-    "edges_input = edges_input_df.values.tolist()\n",
+    "edges_input = edges_input_df[[\"rssi\", \"etx\", \"delay\", \"busy_fraction\"]].values\n",
     "\n",
     "X_test = torch.tensor(scaler.transform(edges_input), dtype=torch.float)"
    ]
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "id": "d3ffa6b0",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "id": "3dae9bab",
    "metadata": {},
    "outputs": [
@@ -126,56 +126,56 @@
      "text": [
       "RSSI   ETX   Delay  Busy   Classe   Status   Confiança \n",
       "-------------------------------------------------------\n",
-      "-75    6.1   77     0.87   0        Ruim     1.00      \n",
-      "-54    2.7   19     0.41   1        Bom      0.97      \n",
-      "-81    4.8   127    0.89   0        Ruim     1.00      \n",
-      "-56    2.3   14     0.41   1        Bom      0.98      \n",
-      "-79    4.8   18     0.85   0        Ruim     1.00      \n",
-      "-61    1.5   6      0.27   1        Bom      0.99      \n",
-      "-66    4.5   79     0.87   0        Ruim     1.00      \n",
-      "-49    1.8   6      0.40   1        Bom      0.99      \n",
-      "-95    3.8   148    0.34   0        Ruim     1.00      \n",
-      "-55    1.6   11     0.29   1        Bom      0.99      \n",
-      "-49    1.1   7      0.55   1        Bom      0.99      \n",
-      "-72    6.3   99     0.79   0        Ruim     1.00      \n",
-      "-95    9.8   79     0.92   0        Ruim     1.00      \n",
-      "-82    3.9   34     0.69   0        Ruim     1.00      \n",
-      "-46    1.0   17     0.24   1        Bom      1.00      \n",
-      "-88    2.7   69     0.66   0        Ruim     1.00      \n",
-      "-68    9.6   21     0.56   0        Ruim     1.00      \n",
-      "-63    2.9   23     0.38   1        Bom      0.91      \n",
-      "-70    2.8   11     0.31   1        Bom      0.92      \n",
-      "-48    1.5   15     0.14   1        Bom      1.00      \n",
-      "-49    1.4   32     0.56   1        Bom      0.96      \n",
-      "-74    9.7   67     0.79   0        Ruim     1.00      \n",
-      "-76    10.7  106    0.85   0        Ruim     1.00      \n",
-      "-67    1.3   10     0.22   1        Bom      0.98      \n",
-      "-60    1.6   8      0.36   1        Bom      0.99      \n",
-      "-64    1.2   19     0.07   1        Bom      0.99      \n",
-      "-54    1.3   10     0.22   1        Bom      1.00      \n",
-      "-61    1.4   14     0.50   1        Bom      0.96      \n",
-      "-81    3.4   35     0.79   0        Ruim     1.00      \n",
-      "-62    1.6   17     0.55   1        Bom      0.88      \n",
-      "-55    1.1   9      0.45   1        Bom      0.99      \n",
-      "-52    8.0   27     0.82   0        Ruim     1.00      \n",
-      "-60    1.2   15     0.66   1        Bom      0.84      \n",
-      "-61    2.9   21     0.28   1        Bom      0.96      \n",
-      "-63    2.0   19     0.16   1        Bom      0.99      \n",
-      "-61    1.4   2      0.18   1        Bom      0.99      \n",
-      "-79    3.5   26     0.79   0        Ruim     1.00      \n",
-      "-64    6.6   42     0.65   0        Ruim     1.00      \n",
-      "-83    7.8   124    0.65   0        Ruim     1.00      \n",
-      "-47    4.2   4      0.29   1        Bom      0.99      \n",
-      "-46    1.7   26     0.27   1        Bom      1.00      \n",
-      "-65    1.3   6      0.26   1        Bom      0.99      \n",
-      "-65    4.3   68     0.54   0        Ruim     0.98      \n",
-      "-83    6.5   86     0.70   0        Ruim     1.00      \n",
-      "-73    4.4   67     0.85   0        Ruim     1.00      \n",
-      "-61    4.7   54     0.75   0        Ruim     0.99      \n",
-      "-83    9.2   62     0.63   0        Ruim     1.00      \n",
-      "-88    4.1   61     0.73   0        Ruim     1.00      \n",
-      "-77    5.3   95     0.66   0        Ruim     1.00      \n",
-      "-77    5.5   21     0.54   0        Ruim     0.99      \n"
+      "-60    1.3   5      0.45   1        Bom      0.98      \n",
+      "-67    1.7   3      0.26   1        Bom      0.99      \n",
+      "-74    4.1   19     0.52   0        Ruim     0.95      \n",
+      "-64    1.3   15     0.50   1        Bom      0.93      \n",
+      "-60    3.4   70     0.78   0        Ruim     0.99      \n",
+      "-70    6.7   146    0.85   0        Ruim     1.00      \n",
+      "-63    4.9   35     0.83   0        Ruim     0.99      \n",
+      "-59    2.6   7      0.42   1        Bom      0.97      \n",
+      "-76    5.6   56     0.69   0        Ruim     1.00      \n",
+      "-61    1.5   13     0.22   1        Bom      1.00      \n",
+      "-52    9.7   31     0.75   0        Ruim     1.00      \n",
+      "-83    7.9   119    0.29   0        Ruim     1.00      \n",
+      "-93    12.5  47     0.71   0        Ruim     1.00      \n",
+      "-65    2.8   26     0.70   0        Ruim     0.89      \n",
+      "-40    1.6   21     0.31   1        Bom      1.00      \n",
+      "-60    1.6   6      0.26   1        Bom      1.00      \n",
+      "-51    5.3   77     0.89   0        Ruim     1.00      \n",
+      "-57    1.6   8      0.52   1        Bom      0.97      \n",
+      "-51    1.2   7      0.18   1        Bom      1.00      \n",
+      "-70    8.4   22     0.42   0        Ruim     0.99      \n",
+      "-64    1.2   13     0.55   1        Bom      0.89      \n",
+      "-53    5.9   10     0.52   1        Bom      0.59      \n",
+      "-56    1.3   9      0.59   1        Bom      0.95      \n",
+      "-59    3.0   26     0.05   1        Bom      1.00      \n",
+      "-51    1.8   5      0.14   1        Bom      1.00      \n",
+      "-64    2.5   150    0.82   0        Ruim     1.00      \n",
+      "-54    1.6   10     0.13   1        Bom      1.00      \n",
+      "-38    2.7   12     0.42   1        Bom      1.00      \n",
+      "-50    1.0   4      0.44   1        Bom      1.00      \n",
+      "-95    14.3  21     0.94   0        Ruim     1.00      \n",
+      "-80    15.0  33     0.65   0        Ruim     1.00      \n",
+      "-56    2.5   18     0.35   1        Bom      0.99      \n",
+      "-57    1.4   3      0.15   1        Bom      1.00      \n",
+      "-56    1.2   10     0.44   1        Bom      0.99      \n",
+      "-70    4.3   84     0.78   0        Ruim     1.00      \n",
+      "-66    4.0   18     0.54   0        Ruim     0.79      \n",
+      "-41    1.6   10     0.17   1        Bom      1.00      \n",
+      "-61    1.9   12     0.49   1        Bom      0.95      \n",
+      "-51    1.8   8      0.12   1        Bom      1.00      \n",
+      "-72    3.3   20     0.73   0        Ruim     0.98      \n",
+      "-64    1.9   7      0.20   1        Bom      0.99      \n",
+      "-61    1.0   5      0.08   1        Bom      1.00      \n",
+      "-95    6.0   150    0.79   0        Ruim     1.00      \n",
+      "-80    4.8   150    0.76   0        Ruim     1.00      \n",
+      "-57    6.0   28     0.82   0        Ruim     0.99      \n",
+      "-65    3.2   129    0.79   0        Ruim     1.00      \n",
+      "-66    9.2   17     0.77   0        Ruim     1.00      \n",
+      "-83    4.2   28     0.89   0        Ruim     1.00      \n",
+      "-71    4.7   16     0.61   0        Ruim     0.97      \n",
+      "-79    5.8   35     0.70   0        Ruim     1.00      \n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "id": "78efbb23",
    "metadata": {},
    "outputs": [
