--- a/src/6.kalman.ipynb
+++ b/src/6.kalman.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 163,
    "id": "d8db0a7e",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 164,
    "id": "d7e271a2",
    "metadata": {},
    "outputs": [],
@@ -43,18 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 165,
    "id": "41a1f475",
    "metadata": {},
    "outputs": [],
    "source": [
     "edges_input_df = pd.read_csv(\"../inputs/edges_input.csv\")\n",
-    "edges_input = edges_input_df.values.tolist()"
+    "edges_input = edges_input_df[[\"rssi\", \"etx\", \"delay\", \"busy_fraction\"]].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 166,
    "id": "a00683f1",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 167,
    "id": "5bfc18ed",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 168,
    "id": "2e84fe65",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 169,
    "id": "4ea22f2f",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 170,
    "id": "448b3ce7",
    "metadata": {},
    "outputs": [
@@ -127,56 +127,56 @@
      "text": [
       "RSSI   ETX   Delay  Busy   EFSR   Classe   Status   Confiança \n",
       "---------------------------------------------------------------------------\n",
-      "-75    6.1   77     0.87   0.43   0        Ruim     0.88      \n",
-      "-54    2.7   19     0.41   0.91   1        Bom      0.67      \n",
-      "-81    4.8   127    0.89   0.79   0        Ruim     0.56      \n",
-      "-56    2.3   14     0.41   0.95   1        Bom      0.77      \n",
-      "-79    4.8   18     0.85   0.92   1        Bom      0.52      \n",
-      "-61    1.5   6      0.27   0.91   1        Bom      0.79      \n",
-      "-66    4.5   79     0.87   0.39   0        Ruim     0.64      \n",
-      "-49    1.8   6      0.40   0.92   1        Bom      0.74      \n",
-      "-95    3.8   148    0.34   0.43   0        Ruim     0.65      \n",
-      "-55    1.6   11     0.29   0.88   1        Bom      0.72      \n",
-      "-49    1.1   7      0.55   0.91   1        Bom      0.86      \n",
-      "-72    6.3   99     0.79   0.93   1        Bom      0.56      \n",
-      "-95    9.8   79     0.92   0.93   0        Ruim     0.55      \n",
-      "-82    3.9   34     0.69   0.93   0        Ruim     0.60      \n",
-      "-46    1.0   17     0.24   0.90   1        Bom      0.75      \n",
-      "-88    2.7   69     0.66   0.93   1        Bom      0.52      \n",
-      "-68    9.6   21     0.56   0.91   0        Ruim     0.58      \n",
-      "-63    2.9   23     0.38   0.34   1        Bom      0.54      \n",
-      "-70    2.8   11     0.31   0.43   1        Bom      0.62      \n",
-      "-48    1.5   15     0.14   0.92   1        Bom      0.84      \n",
-      "-49    1.4   32     0.56   0.39   1        Bom      0.73      \n",
-      "-74    9.7   67     0.79   0.93   1        Bom      0.51      \n",
-      "-76    10.7  106    0.85   0.88   0        Ruim     0.59      \n",
-      "-67    1.3   10     0.22   0.90   1        Bom      0.74      \n",
-      "-60    1.6   8      0.36   0.36   1        Bom      0.70      \n",
-      "-64    1.2   19     0.07   0.91   1        Bom      0.86      \n",
-      "-54    1.3   10     0.22   0.92   1        Bom      0.93      \n",
-      "-61    1.4   14     0.50   0.41   1        Bom      0.78      \n",
-      "-81    3.4   35     0.79   0.94   1        Bom      0.53      \n",
-      "-62    1.6   17     0.55   0.34   1        Bom      0.57      \n",
-      "-55    1.1   9      0.45   0.37   1        Bom      0.64      \n",
-      "-52    8.0   27     0.82   0.86   0        Ruim     0.54      \n",
-      "-60    1.2   15     0.66   0.91   1        Bom      0.71      \n",
-      "-61    2.9   21     0.28   0.33   1        Bom      0.67      \n",
-      "-63    2.0   19     0.16   0.28   1        Bom      0.65      \n",
-      "-61    1.4   2      0.18   0.43   1        Bom      0.69      \n",
-      "-79    3.5   26     0.79   0.37   0        Ruim     0.68      \n",
-      "-64    6.6   42     0.65   0.47   0        Ruim     0.79      \n",
-      "-83    7.8   124    0.65   0.91   0        Ruim     0.69      \n",
-      "-47    4.2   4      0.29   0.90   1        Bom      0.71      \n",
-      "-46    1.7   26     0.27   0.31   1        Bom      0.67      \n",
-      "-65    1.3   6      0.26   0.33   1        Bom      0.67      \n",
-      "-65    4.3   68     0.54   0.50   0        Ruim     0.64      \n",
-      "-83    6.5   86     0.70   0.33   0        Ruim     0.82      \n",
-      "-73    4.4   67     0.85   0.38   0        Ruim     0.87      \n",
-      "-61    4.7   54     0.75   0.35   0        Ruim     0.90      \n",
-      "-83    9.2   62     0.63   0.42   0        Ruim     0.89      \n",
-      "-88    4.1   61     0.73   0.29   0        Ruim     0.93      \n",
-      "-77    5.3   95     0.66   0.36   0        Ruim     0.92      \n",
-      "-77    5.5   21     0.54   0.48   0        Ruim     0.88      \n"
+      "-60    1.3   5      0.45   0.92   1        Bom      0.95      \n",
+      "-67    1.7   3      0.26   0.91   1        Bom      0.96      \n",
+      "-74    4.1   19     0.52   0.43   0        Ruim     0.55      \n",
+      "-64    1.3   15     0.50   0.88   1        Bom      0.73      \n",
+      "-60    3.4   70     0.78   0.50   0        Ruim     0.62      \n",
+      "-70    6.7   146    0.85   0.38   0        Ruim     0.80      \n",
+      "-63    4.9   35     0.83   0.41   0        Ruim     0.86      \n",
+      "-59    2.6   7      0.42   0.44   0        Ruim     0.51      \n",
+      "-76    5.6   56     0.69   0.33   0        Ruim     0.77      \n",
+      "-61    1.5   13     0.22   0.95   1        Bom      0.69      \n",
+      "-52    9.7   31     0.75   0.88   0        Ruim     0.52      \n",
+      "-83    7.9   119    0.29   0.33   0        Ruim     0.78      \n",
+      "-93    12.5  47     0.71   0.39   0        Ruim     0.85      \n",
+      "-65    2.8   26     0.70   0.93   0        Ruim     0.67      \n",
+      "-40    1.6   21     0.31   0.42   1        Bom      0.56      \n",
+      "-60    1.6   6      0.26   0.84   1        Bom      0.79      \n",
+      "-51    5.3   77     0.89   0.37   0        Ruim     0.65      \n",
+      "-57    1.6   8      0.52   0.41   1        Bom      0.56      \n",
+      "-51    1.2   7      0.18   0.33   1        Bom      0.63      \n",
+      "-70    8.4   22     0.42   0.42   0        Ruim     0.69      \n",
+      "-64    1.2   13     0.55   0.34   0        Ruim     0.51      \n",
+      "-53    5.9   10     0.52   0.89   1        Bom      0.62      \n",
+      "-56    1.3   9      0.59   0.33   1        Bom      0.63      \n",
+      "-59    3.0   26     0.05   0.36   1        Bom      0.66      \n",
+      "-51    1.8   5      0.14   0.40   1        Bom      0.69      \n",
+      "-64    2.5   150    0.82   0.43   0        Ruim     0.66      \n",
+      "-54    1.6   10     0.13   0.85   1        Bom      0.71      \n",
+      "-38    2.7   12     0.42   0.91   1        Bom      0.86      \n",
+      "-50    1.0   4      0.44   0.91   1        Bom      0.92      \n",
+      "-95    14.3  21     0.94   0.96   1        Bom      0.59      \n",
+      "-80    15.0  33     0.65   0.94   0        Ruim     0.54      \n",
+      "-56    2.5   18     0.35   0.91   1        Bom      0.77      \n",
+      "-57    1.4   3      0.15   0.32   1        Bom      0.70      \n",
+      "-56    1.2   10     0.44   0.36   1        Bom      0.68      \n",
+      "-70    4.3   84     0.78   0.33   0        Ruim     0.70      \n",
+      "-66    4.0   18     0.54   0.38   0        Ruim     0.75      \n",
+      "-41    1.6   10     0.17   0.92   1        Bom      0.69      \n",
+      "-61    1.9   12     0.49   0.90   1        Bom      0.84      \n",
+      "-51    1.8   8      0.12   0.39   1        Bom      0.75      \n",
+      "-72    3.3   20     0.73   0.90   1        Bom      0.51      \n",
+      "-64    1.9   7      0.20   0.90   1        Bom      0.79      \n",
+      "-61    1.0   5      0.08   0.42   1        Bom      0.74      \n",
+      "-95    6.0   150    0.79   0.88   0        Ruim     0.50      \n",
+      "-80    4.8   150    0.76   0.31   0        Ruim     0.77      \n",
+      "-57    6.0   28     0.82   0.90   0        Ruim     0.69      \n",
+      "-65    3.2   129    0.79   0.90   0        Ruim     0.66      \n",
+      "-66    9.2   17     0.77   0.91   0        Ruim     0.65      \n",
+      "-83    4.2   28     0.89   0.91   0        Ruim     0.64      \n",
+      "-71    4.7   16     0.61   0.88   0        Ruim     0.64      \n",
+      "-79    5.8   35     0.70   0.91   0        Ruim     0.64      \n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 171,
    "id": "f1ad0de5",
    "metadata": {},
    "outputs": [
