--- a/src/7.results.ipynb
+++ b/src/7.results.ipynb
@@ -5,12 +5,12 @@
    "id": "3b72beb0",
    "metadata": {},
    "source": [
-    "### Imports"
+    "## Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 327,
    "id": "e3807161",
    "metadata": {},
    "outputs": [],
@@ -26,6 +26,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ea2556b1",
+   "metadata": {},
+   "source": [
+    "## Parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9da111f0",
    "metadata": {},
    "source": [
@@ -34,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 328,
    "id": "c84cc5b8",
    "metadata": {},
    "outputs": [],
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 329,
    "id": "48568d49",
    "metadata": {},
    "outputs": [],
@@ -64,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 330,
    "id": "c810ad31",
    "metadata": {},
    "outputs": [],
@@ -76,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 331,
    "id": "00125f09",
    "metadata": {},
    "outputs": [],
@@ -88,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 332,
    "id": "bb92b780",
    "metadata": {},
    "outputs": [],
@@ -116,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 333,
    "id": "bd9b6440",
    "metadata": {},
    "outputs": [
@@ -168,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 334,
    "id": "db360092",
    "metadata": {},
    "outputs": [
@@ -248,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 335,
    "id": "5c983aca",
    "metadata": {},
    "outputs": [],
@@ -267,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 336,
    "id": "74cccf01",
    "metadata": {},
    "outputs": [
@@ -318,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 337,
    "id": "69217713",
    "metadata": {},
    "outputs": [
