--- a/src/5.fuzzy.ipynb
+++ b/src/5.fuzzy.ipynb
@@ -151,6 +151,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e4a367cc",
+   "metadata": {},
+   "source": [
+    "### Confidence"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 139,
    "id": "f80bd9c6",
