--- a/src/6.kalman.ipynb
+++ b/src/6.kalman.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "727c9ab7",
    "metadata": {},
    "outputs": [],
@@ -106,12 +106,12 @@
     "kf.H = np.array([[1.]])\n",
     "kf.P = 1.0   # covariância inicial do estado\n",
     "kf.R = 1e-2  # covariância da observação (measurement noise)\n",
-    "kf.Q = 4e-2 # covariância do processo (process noise)"
+    "kf.Q = 4e-2  # covariância do processo (process noise)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "ff94a124",
    "metadata": {},
    "outputs": [],
@@ -119,9 +119,9 @@
     "kalman = []\n",
     "\n",
     "for z in confidence_fusion:\n",
-    "    kf.predict()           # predição\n",
-    "    kf.update(z)           # atualização com nova medição\n",
-    "    kalman.append(kf.x[0]) # guarda o estado filtrado"
+    "    kf.predict()           \n",
+    "    kf.update(z)           \n",
+    "    kalman.append(kf.x[0])"
    ]
   },
   {
