--- a/src/5.fuzzy.ipynb
+++ b/src/5.fuzzy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 49,
    "id": "57301dc5",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 50,
    "id": "46ca6451",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 51,
    "id": "231f6b80",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 52,
    "id": "d0d0907d",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 53,
    "id": "64c24e0e",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 54,
    "id": "1c2213ff",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 55,
    "id": "1b861a33",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 56,
    "id": "d37e6544",
    "metadata": {},
    "outputs": [],
@@ -122,27 +122,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "79aa64dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "rules = [\n",
+    "    # Quando EFSR é alto → tende a qualidade boa\n",
     "    ctrl.Rule(conf_model['alta'] & conf_efsr['alta'], quality['boa']),\n",
-    "    ctrl.Rule(conf_model['alta'] & conf_efsr['media'], quality['media']),\n",
-    "    ctrl.Rule(conf_model['alta'] & conf_efsr['baixa'], quality['ruim']),\n",
     "    ctrl.Rule(conf_model['media'] & conf_efsr['alta'], quality['boa']),\n",
+    "    ctrl.Rule(conf_model['baixa'] & conf_efsr['alta'], quality['media']),\n",
+    "\n",
+    "    # Quando EFSR é médio → depende mais do modelo\n",
+    "    ctrl.Rule(conf_model['alta'] & conf_efsr['media'], quality['boa']),\n",
     "    ctrl.Rule(conf_model['media'] & conf_efsr['media'], quality['media']),\n",
+    "    ctrl.Rule(conf_model['baixa'] & conf_efsr['media'], quality['ruim']),\n",
+    "\n",
+    "    # Quando EFSR é baixo → qualidade cai forte\n",
+    "    ctrl.Rule(conf_model['alta'] & conf_efsr['baixa'], quality['ruim']),\n",
     "    ctrl.Rule(conf_model['media'] & conf_efsr['baixa'], quality['ruim']),\n",
-    "    ctrl.Rule(conf_model['baixa'] & conf_efsr['alta'], quality['boa']),\n",
-    "    ctrl.Rule(conf_model['baixa'] & conf_efsr['media'], quality['media']),\n",
     "    ctrl.Rule(conf_model['baixa'] & conf_efsr['baixa'], quality['ruim'])\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 58,
    "id": "99494e53",
    "metadata": {},
    "outputs": [],
@@ -151,16 +156,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e4a367cc",
-   "metadata": {},
-   "source": [
-    "### Confidence"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 59,
    "id": "f80bd9c6",
    "metadata": {},
    "outputs": [],
@@ -174,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 60,
    "id": "4082a292",
    "metadata": {},
    "outputs": [],
@@ -185,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 61,
    "id": "2c599ae9",
    "metadata": {},
    "outputs": [],
@@ -209,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 62,
    "id": "5856f7c6",
    "metadata": {},
    "outputs": [],
@@ -220,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 63,
    "id": "9d3291bd",
    "metadata": {},
    "outputs": [
@@ -230,56 +227,56 @@
      "text": [
       "RSSI   ETX   Delay  Busy   EFSR   Classe   Status   Confiança \n",
       "--------------------------------------------------------------\n",
-      "-59    1.1   17     0.20   0.33   0        Ruim     0.61      \n",
-      "-60    1.4   6      0.10   0.91   1        Bom      0.68      \n",
-      "-78    6.8   19     0.49   0.91   1        Bom      0.69      \n",
-      "-84    11.0  18     0.26   0.36   0        Ruim     0.58      \n",
-      "-64    3.2   7      0.20   0.36   0        Ruim     0.59      \n",
-      "-43    1.5   4      0.32   0.90   1        Bom      0.67      \n",
-      "-58    1.3   4      0.22   0.90   1        Bom      0.67      \n",
-      "-57    1.2   14     0.17   0.90   1        Bom      0.66      \n",
-      "-62    1.0   7      0.11   0.93   1        Bom      0.71      \n",
-      "-69    1.8   5      0.22   0.38   0        Ruim     0.57      \n",
-      "-62    3.1   7      0.34   0.32   0        Ruim     0.62      \n",
-      "-57    1.0   14     0.30   0.35   0        Ruim     0.59      \n",
-      "-49    2.6   18     0.19   0.41   0        Ruim     0.55      \n",
-      "-78    4.4   42     0.82   0.48   0        Ruim     0.52      \n",
+      "-59    1.1   17     0.20   0.33   0        Ruim     0.59      \n",
+      "-60    1.4   6      0.10   0.91   1        Bom      0.83      \n",
+      "-78    6.8   19     0.49   0.91   0        Ruim     0.51      \n",
+      "-84    11.0  18     0.26   0.36   0        Ruim     0.81      \n",
+      "-64    3.2   7      0.20   0.36   0        Ruim     0.55      \n",
+      "-43    1.5   4      0.32   0.90   1        Bom      0.82      \n",
+      "-58    1.3   4      0.22   0.90   1        Bom      0.82      \n",
+      "-57    1.2   14     0.17   0.90   1        Bom      0.82      \n",
+      "-62    1.0   7      0.11   0.93   1        Bom      0.83      \n",
+      "-69    1.8   5      0.22   0.38   0        Ruim     0.52      \n",
+      "-62    3.1   7      0.34   0.32   0        Ruim     0.60      \n",
+      "-57    1.0   14     0.30   0.35   0        Ruim     0.55      \n",
+      "-49    2.6   18     0.19   0.41   1        Bom      0.51      \n",
+      "-78    4.4   42     0.82   0.48   0        Ruim     0.82      \n",
       "-66    2.9   10     0.44   0.89   1        Bom      0.65      \n",
-      "-43    1.2   20     0.25   0.34   0        Ruim     0.60      \n",
-      "-84    3.2   26     0.37   0.44   0        Ruim     0.53      \n",
-      "-52    1.8   12     0.15   0.35   0        Ruim     0.60      \n",
-      "-75    5.3   59     0.43   0.90   1        Bom      0.68      \n",
-      "-81    5.2   43     0.84   0.38   0        Ruim     0.57      \n",
-      "-71    5.0   46     0.77   0.33   0        Ruim     0.62      \n",
-      "-54    1.2   6      0.16   0.91   1        Bom      0.69      \n",
-      "-42    1.1   5      0.14   0.36   0        Ruim     0.58      \n",
-      "-69    3.4   150    0.79   0.89   1        Bom      0.65      \n",
-      "-75    11.0  44     0.94   0.34   0        Ruim     0.60      \n",
-      "-70    7.7   150    0.89   0.90   1        Bom      0.67      \n",
-      "-47    2.8   8      0.53   0.95   1        Bom      0.77      \n",
-      "-81    7.6   63     0.93   0.35   0        Ruim     0.60      \n",
-      "-63    1.2   6      0.42   0.89   1        Bom      0.65      \n",
-      "-82    5.5   65     0.93   0.89   1        Bom      0.66      \n",
-      "-48    1.2   15     0.49   0.92   1        Bom      0.70      \n",
-      "-66    3.1   51     0.57   0.88   1        Bom      0.64      \n",
-      "-45    2.2   10     0.14   0.92   1        Bom      0.70      \n",
-      "-52    1.1   4      0.21   0.39   0        Ruim     0.56      \n",
-      "-82    14.0  66     0.62   0.86   1        Bom      0.62      \n",
-      "-51    1.9   8      0.17   0.89   1        Bom      0.66      \n",
-      "-73    4.4   74     0.62   0.88   1        Bom      0.64      \n",
-      "-69    3.6   27     0.54   0.36   0        Ruim     0.58      \n",
-      "-79    8.7   46     0.46   0.92   1        Bom      0.71      \n",
-      "-74    8.0   54     0.63   0.35   0        Ruim     0.60      \n",
-      "-71    12.6  54     0.73   0.30   0        Ruim     0.65      \n",
-      "-77    3.8   112    0.51   0.91   1        Bom      0.69      \n",
-      "-58    1.4   6      0.09   0.32   0        Ruim     0.62      \n",
-      "-44    1.2   18     0.09   0.87   1        Bom      0.63      \n",
-      "-42    2.0   4      0.14   0.28   0        Ruim     0.67      \n",
-      "-55    5.3   111    0.85   0.30   0        Ruim     0.65      \n",
-      "-68    8.4   51     0.82   0.41   0        Ruim     0.55      \n",
-      "-83    6.9   150    0.81   0.35   0        Ruim     0.60      \n",
+      "-43    1.2   20     0.25   0.34   0        Ruim     0.57      \n",
+      "-84    3.2   26     0.37   0.44   0        Ruim     0.63      \n",
+      "-52    1.8   12     0.15   0.35   0        Ruim     0.56      \n",
+      "-75    5.3   59     0.43   0.90   0        Ruim     0.51      \n",
+      "-81    5.2   43     0.84   0.38   0        Ruim     0.81      \n",
+      "-71    5.0   46     0.77   0.33   0        Ruim     0.81      \n",
+      "-54    1.2   6      0.16   0.91   1        Bom      0.83      \n",
+      "-42    1.1   5      0.14   0.36   0        Ruim     0.54      \n",
+      "-69    3.4   150    0.79   0.89   0        Ruim     0.51      \n",
+      "-75    11.0  44     0.94   0.34   0        Ruim     0.82      \n",
+      "-70    7.7   150    0.89   0.90   0        Ruim     0.51      \n",
+      "-47    2.8   8      0.53   0.95   1        Bom      0.78      \n",
+      "-81    7.6   63     0.93   0.35   0        Ruim     0.82      \n",
+      "-63    1.2   6      0.42   0.89   1        Bom      0.77      \n",
+      "-82    5.5   65     0.93   0.89   0        Ruim     0.51      \n",
+      "-48    1.2   15     0.49   0.92   1        Bom      0.81      \n",
+      "-66    3.1   51     0.57   0.88   0        Ruim     0.51      \n",
+      "-45    2.2   10     0.14   0.92   1        Bom      0.83      \n",
+      "-52    1.1   4      0.21   0.39   0        Ruim     0.50      \n",
+      "-82    14.0  66     0.62   0.86   0        Ruim     0.52      \n",
+      "-51    1.9   8      0.17   0.89   1        Bom      0.82      \n",
+      "-73    4.4   74     0.62   0.88   0        Ruim     0.52      \n",
+      "-69    3.6   27     0.54   0.36   0        Ruim     0.61      \n",
+      "-79    8.7   46     0.46   0.92   0        Ruim     0.50      \n",
+      "-74    8.0   54     0.63   0.35   0        Ruim     0.81      \n",
+      "-71    12.6  54     0.73   0.30   0        Ruim     0.83      \n",
+      "-77    3.8   112    0.51   0.91   0        Ruim     0.51      \n",
+      "-58    1.4   6      0.09   0.32   0        Ruim     0.59      \n",
+      "-44    1.2   18     0.09   0.87   1        Bom      0.82      \n",
+      "-42    2.0   4      0.14   0.28   0        Ruim     0.66      \n",
+      "-55    5.3   111    0.85   0.30   0        Ruim     0.82      \n",
+      "-68    8.4   51     0.82   0.41   0        Ruim     0.81      \n",
+      "-83    6.9   150    0.81   0.35   0        Ruim     0.82      \n",
       "-67    3.1   45     0.41   0.90   1        Bom      0.67      \n",
-      "-79    7.6   52     0.83   0.91   1        Bom      0.69      \n"
+      "-79    7.6   52     0.83   0.91   0        Ruim     0.51      \n"
      ]
     }
    ],
@@ -305,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 64,
    "id": "f9257d18",
    "metadata": {},
    "outputs": [
