--- a/src/7.results.ipynb
+++ b/src/7.results.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1723,
+   "execution_count": 1,
    "id": "e3807161",
    "metadata": {},
    "outputs": [],
@@ -18,11 +18,11 @@
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import skfuzzy as fuzz\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix, precision_score, recall_score, f1_score\n",
-    "from skfuzzy import control as ctrl"
+    "import matplotlib.pyplot as plt\n",
+    "from skfuzzy import control as ctrl\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, precision_score, recall_score, f1_score"
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1724,
+   "execution_count": 2,
    "id": "c84cc5b8",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1725,
+   "execution_count": 3,
    "id": "48568d49",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1726,
+   "execution_count": 4,
    "id": "00125f09",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1727,
+   "execution_count": 5,
    "id": "bb92b780",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1728,
+   "execution_count": 6,
    "id": "bd9b6440",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1729,
+   "execution_count": 7,
    "id": "db360092",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1730,
+   "execution_count": 8,
    "id": "f04ac999",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1731,
+   "execution_count": 9,
    "id": "8aa55b39",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1732,
+   "execution_count": 10,
    "id": "5049e321",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1733,
+   "execution_count": 11,
    "id": "3e595c95",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1734,
+   "execution_count": 12,
    "id": "5c983aca",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1735,
+   "execution_count": 13,
    "id": "f74f1bbc",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1736,
+   "execution_count": 14,
    "id": "63232f62",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1737,
+   "execution_count": 15,
    "id": "74cccf01",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1738,
+   "execution_count": 16,
    "id": "69217713",
    "metadata": {},
    "outputs": [
