--- a/src/7.results.ipynb
+++ b/src/7.results.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 612,
+   "execution_count": 712,
    "id": "e3807161",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 713,
    "id": "c84cc5b8",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 614,
+   "execution_count": 714,
    "id": "48568d49",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 715,
    "id": "00125f09",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 716,
    "id": "bb92b780",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 717,
    "id": "bd9b6440",
    "metadata": {},
    "outputs": [
@@ -148,6 +148,8 @@
     "ticks = [1] + list(range(5, n + 1, 5))\n",
     "plt.xticks(ticks)\n",
     "\n",
+    "os.makedirs(\"../results\", exist_ok=True)\n",
+    "plt.savefig('../results/fuzzy_logic_kalman_filter.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   }
